PLAT-727: hiding nav tooltips on IE9 again due to weird style issues within RND

--- a/cr/themes/custom/campaign_base/ie9-css/styles-override/styles-override.css
+++ b/cr/themes/custom/campaign_base/ie9-css/styles-override/styles-override.css
@@ -70,3 +70,8 @@
   height: 60px;
   text-align: center;
 }
+
+/*Hide on IE9 and below*/
+.ui-tooltip.ui-tooltip--nav {
+  display: none !important;
+}
